--- a/src/styles/Dropdown.scss
+++ b/src/styles/Dropdown.scss
@@ -10,9 +10,10 @@
     cursor: pointer;
     border-radius: 5px;
     height: 52px;
+    margin-top: 1.5rem 0;
 
     & img {
-      transition: .3s ease-in-out;
+      transition: 0.3s ease-in-out;
       width: 20px;
       margin-right: 1rem;
     }
@@ -23,25 +24,24 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
-    height: 0;
-    transform: scaleY(0);
-    transition: all .5s ease-in-out;
-    
+    height: 0px;
+    transition: all 0.5s ease-in-out;
   }
-  
+
   .dropdown__item {
     // transition: .5s ease-in-out;
     // height: 0;
     padding: $main-padding;
   }
-  
+
   .open {
+    // transition: all .5s ease-in-out;
+
     height: 100%;
-    transform: scaleY(1) !important;
+    // transform: scaleY(1) !important;
     // animation: test .5 ease-in-out ;
     // transition: .5s ease-in-out;
     // height: calc(100% - 1px);
     // height: calc(100% - 1px);
   }
-  
 }
